[package]
name = "nbnf_macro"
description = "nbnf's proc macro enabling ergonomic parser generation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
nbnf_language = { workspace =  true }
quote = { workspace =  true }
syn = { workspace =  true }
